Created a courses.html link and then applied html elements and links to courses.html

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -4,6 +4,11 @@
     text-align: center;
 }
 
+.coursehead {
+    font-family: 'Montserrat',sans-serif;
+    color:#c7522a;
+}
+
 .navigation {
     background-color: lightblue;
     text-align: center;
