--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -1,14 +1,24 @@
 body {
     display: grid;
     grid-template-columns: 1fr 3fr 1fr;
+    background-color: #edddd4;
 }
 
 .headheader {
     font-family: 'Montserrat',sans-serif;
     color:#334259;
-    text-align: center;
     display: flex;
+    justify-content: center;
 }
+.list-nav{
+    display: flex;
+    justify-content: center;
+}
+.list-nav li{
+    margin: 10px;
+    list-style-type: none;
+}
+
 header {
     background-color: #A6CAD4;
     grid-column: 1/4;
