--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -1,7 +1,18 @@
 body {
-    display: grid;
-    grid-template-columns: 1fr 3fr 1fr;
     background-color: #edddd4;
+    display: grid;
+    grid-template-columns: 2fr 1fr;
+}
+
+main {
+    margin: 0px;
+}
+
+.section img{
+    width: 490px;
+    height: 367px;
+    display: flex;
+    margin-left: 900px;
 }
 
 .headheader {
@@ -48,6 +59,7 @@ header h1 {
 header ul{
     margin: 0px;
 }
+
 
 
 
