--- a/css/coursestyle.css
+++ b/css/coursestyle.css
@@ -6,11 +6,16 @@ body {
 main {
     margin: 0px;
 }
-.black{
-    color:black;
+
+hr {
+    border-top: 2px solid black;
 }
 
-.gap{
+.black {
+    color: black;
+}
+
+.gap {
     margin-left: 400px;
 }
 
@@ -55,6 +60,8 @@ header h1 {
     margin: 0px;
 }
 
-header ul{
+header ul {
     margin: 0px;
 }
+
+@media (max-width: 600px) {}
